# makro_sim

./: .gitignore  check_yaml.py  etf_analysis.py  etf_analysis_extended.py  etf_analysis_extended.py.bak  generate_skeleton.py  get-pip.py  indicator_cache.json  inspect_utils.py  pyproject.toml  pyproject.toml.bak  requirements.txt  run.py  run_dashboard.ps1  setup.py  struktur.txt  strukturierter_projekt.md  summary_metrics.csv  test.txt  test_edge.txt  test_regimes.py.py
cache/: CPIAUCSL.csv  (+6 more)
makro_sim/: .gitignore  check_yaml.py  pyproject.toml  requirements.txt  run.py  setup.py
makro_sim/risk_dashboard/: README.md  app.py
makro_sim/risk_dashboard/config/: etf_universe.yaml
makro_sim/risk_dashboard/core/: cluster.py  cluster_engine.py  config.py  country_assets.py  data_import.py  ews.py  fx_forecast.py  fx_model.py  heatmap.py  investment_engine.py  lexicon.py  market_engine.py  risk_engine.py  storyline.py  storyline_engine.py  ui_helpers.py  utils.py
makro_sim/risk_dashboard/core/analysis/: __init__.py  stock_clusterin.py
makro_sim/risk_dashboard/core/backend/: heatmap.py  ki_scanner.py  plots.py  portfolio_compare.py  portfolio_manager.py  symbol_tools.py
makro_sim/risk_dashboard/core/country/: __init__.py  country_storyline.py
makro_sim/risk_dashboard/data/: etf_universes.py
makro_sim/risk_dashboard/docs/: lexikon.md  scenarios.md
makro_sim/risk_dashboard/logs/: audit_log.jsonl
makro_sim/risk_dashboard/tests/: test_covariance.py  test_fx.py
makro_sim/risk_dashboard/ui/: components.py  logic_portfolio.py  logic_screener.py  profiles_ui.py
(+358 files in other folders)
